After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741426 - Some metadata not restored (syntax highlight mode, spell checking language)
Some metadata not restored (syntax highlight mode, spell checking language)
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: file loading and saving
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
: 741432 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-12-12 08:23 UTC by Sébastien Wilmet
Modified: 2014-12-14 16:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sébastien Wilmet 2014-12-12 08:23:04 UTC
In gedit 3.14, I open a *.m file, the highlight mode is by default Octave. I change it to "Matlab" (either via the gear menu or via the statusbar), I close the file and reopen it, it is still Octave.

It seems that the highlight mode metadata is not saved, or at least not restored, even if I save the file.

I don't think it's related to bug #736591, because the bug happens even if I have several files opened (so the mainloop is still running and the async operation to save the metadata should be finished).
Comment 1 Sébastien Wilmet 2014-12-12 11:53:28 UTC
Apparently the same bug occurs for the spell checking language.
Comment 2 Sébastien Wilmet 2014-12-12 11:55:05 UTC
*** Bug 741432 has been marked as a duplicate of this bug. ***
Comment 3 Sébastien Wilmet 2014-12-14 14:32:53 UTC
It seems that the bug occurs only when the spell checker plugin is enabled.