GeditDocument: fix bug when setting metadata

g_file_info_copy_into() begins to clear @dest_info, and then copy the
attributes from @src_info to @dest_info.

So the previously loaded metadata in doc->priv->metadata_info were
removed each time that gedit_document_set_metadata() was called (with
the gvfs metadata). Now the new attributes are correctly copied, without
removing the other ones.

https://bugzilla.gnome.org/show_bug.cgi?id=741426